- Simplified EndpointConfigurationInfo by removing all URLs apart from WSDL as we can't currently support setting individual endpoint URLs with JAX-WS.   This simplification should probably extend to ServiceFactory as well and maybe result in a merge of both concepts. - Re-worked associated tests. - Moved ConsumerRegistryTestCase to more appropriate registry package. Still need to be cleaned-up. - Fixed BehaviorBackedServiceFactory to properly mock starting mechanism of ServiceFactories.